# CSCI-1230-final

./: BASE_DIFFERENCES_MAPPING.txt  CMakeLists.txt  CMakeLists.txt.user.ec75b6d  README.md  Technical_Presentation.md  remove_root_motion.py
projA/resources/shaders/: default.frag  screen.frag
projA/src/: DefaultScene.h  camera.h  main.cpp  realtime.h
projA/src/shapes/: Cone.cpp  Cylinder.cpp  Star.cpp  Star.h
projA/src/utils/: glb_loader.h  matrix_utils.cpp  scenedata.h  scenefilereader.cpp  sceneparser.cpp  sceneparser.h  tessellator.h
resources/shaders/: blur.frag  bright.frag  default.frag  default.vert  screen.frag
scenefiles/realtime/required/: alien_fish.json  combined.json  test_desert_titan.json  test_glb.json
src/: camera.cpp  defaultscene.cpp  main.cpp  mainwindow.cpp  mainwindow.h  realtime.cpp  realtime.h  settings.h
src/shapes/: Cone.h  Cube.cpp  Sphere.cpp
src/utils/: animation_director.cpp  animation_director.h  glb_loader.cpp  glb_loader.h  matrix_utils.h  tessellator.cpp
